# obsidian

./: .gitignore  Obsidian_SDD.docx  README.md
assets/: curated_recipes.json  item_display_names.json  item_names.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/scripts/: ingest_recipes.js
src-tauri/src/: main.rs  memory.rs  settings.rs  ws.rs
src-tauri/src/api/: alchemy.rs  chronicle.rs  marrow.rs  mod.rs  seance.rs  settings.rs  specter.rs  wail.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/capture/: mod.rs
src-tauri/src/db/: item_map.rs  mod.rs  schema.rs
src-tauri/src/db/migrations/: 0001_init.sql  002_items.sql  003_marrow.sql  004_alchemy_sessions.sql  004_marrow_schema_reconcile.sql  005_add_best_city_to_alchemy_items.sql
src-tauri/src/macro_engine/: mod.rs
src-tauri/src/modules/: alchemy.rs  alchemy_api_stubs.rs  alchemy_old.rs  hex.rs  marrow.rs  marrow_recommend.rs  mod.rs  seance.rs  wraith.rs
ui/: alchemy.js  app.js  index.html  marrow.js
ui/pages/: alchemy.html  chronicle.html  effigy.html  hemorrhage.html  hex.html  marrow.html  seance.html  settings.html  specter.html  wail.html  wraith.html
ui/styles/: main.css
